# cobbler

./: .bandit.yml  .codecov.yml  .dockerignore  .gitignore  .hgtags  .pre-commit-config.yaml  .prospector.yml  .pylintrc  .pyup.yml  .readthedocs.yml  .rstcheck.cfg  .shellcheckrc  .travis.yaml  .travis.yml  .xyzzy  AGENTS.md  AUTHORS  AUTHORS.in  CHANGELOG  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPYING_ELILO  DOCKER-BUILD.md  Dockerfile  MANIFEST.in  Makefile  NEWS  README  README.md  SECURITY.md  TODO  api.py  bootconf  bootconf.conf.example  bootconf.man  bootconf.pod  check.py  cobbler  cobbler-logrotate  cobbler.conf  (+51 more)
.benchmarks/: Linux-CPython-3.13-64bit
.github/: FUNDING.yml  dependabot.yml  labeler.yml  pull_request_template.md
.obs/: main.yml  pull_request.yml  workflows.yml
apitests/: apitests.conf  apitests.conf.sample  base.py  distro_test.py  profile_test.py  system_test.py  virt.py
autoinstall_scripts/: agama_init_default  agama_late_default  cloud_config_early_default  cloud_config_late_default  preseed_early_default  xcp_post_install  xcp_pre_install
autoinstall_snippets/: agama_hostname  agama_networking  autoinstall_done  autoinstall_start  cloud_config_apt  cloud_config_hostname  cloud_config_network  cloud_config_user_data  cobbler_register  first_boot  keep_files  keep_rhn_keys  keep_ssh_host_keys  late_apt_repo_config  log_ks_post  log_ks_pre  network_config  network_config_esx  network_config_esxi  network_config_xcp  network_disable_interfaces  post_anamon  post_install_network_config  post_install_network_config_deb  pre_anamon  (+8 more)
(+2277 files in other folders)
