[build-system]
requires = ["coverage", "distro", "sphinx", "setuptools", "wheel"]
build-backend = 'setuptools.build_meta'

[tool.isort]
profile = "black"
known_cobbler="cobbler"
known_tests="tests"
sections="FUTURE,STDLIB,FIRSTPARTY,THIRDPARTY,LOCALFOLDER,COBBLER,TESTS"
extend_skip = ["system-tests"]

[tool.pyright]
pythonVersion = "3.6"
typeCheckingMode = "strict"
useLibraryCodeForTypes = true
exclude = ["build", "cobbler/cli.py", "venv", ".venv", "tests/cli/*.py", "contrib/**/*.py"]
